Fix: Fix bug in removing gaps in case filename collisions (would) occur
- Treat FileExistsErrors by assigning a temporary filename. File is temporarily named to the tmp filename before a 2nd attempt (-> which always should be successful) is performed, to rename the file to the actual, real filename. This should succeed, since the previously colliding file, has been renamed to its new expected filename already.

- Removing suffix from new filenames
- Adjust regex to more precisely and therefore more acurately capture and distinguish between optional filename suffix and file extension (-> the dot "." will not be considered as part of the suffix anymore but the filename extension)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ include = [
 [tool.poetry.dependencies]
 python = "~3.11"
 pillow = "~10.3"
+natsort = "^8.4.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2"
